--- a/roles/ubuntu/tasks/main.yml
+++ b/roles/ubuntu/tasks/main.yml
@@ -1,3 +1,12 @@
-#SPDX-License-Identifier: MIT-0
+# SPDX-License-Identifier: MIT-0
 ---
 # tasks file for roles/ubuntu
+
+- name: Remove packages
+  ansible.builtin.apt:
+    name:
+      - snapd
+      - modemmanager
+      - ubuntu-pro*
+    state: absent
+  tags: apt
