--- a/roles/pdns-recursor/templates/10-pdns-recursor.yml
+++ b/roles/pdns-recursor/templates/10-pdns-recursor.yml
@@ -5,11 +5,11 @@ webservice:
   allow_from:
   - 127.0.0.1
   api_dir: '/var/spool/powerdns'
-  api_key: {{ lookup('community.general.random_string', length=8) }}
+  api_key: "{{ lookup('community.general.random_string', length=8) }}"
   # loglevel: none
   # loglevel: normal
   # loglevel: detailed
-  password: {{ lookup('community.general.random_string', length=8) }}
+  password: "{{ lookup('community.general.random_string', length=8) }}"
 #   port: 8082
   webserver: true
 
