--- a/roles/pdns-recursor/templates/10-pdns-recursor.yml
+++ b/roles/pdns-recursor/templates/10-pdns-recursor.yml
@@ -4,7 +4,7 @@ webservice:
   address: 127.0.0.1
   allow_from:
   - 127.0.0.1
-  api_dir: '/var/spool/powerdns'
+  # api_dir: '/var/spool/powerdns'
   api_key: "{{ lookup('community.general.random_string', length=8) }}"
   # loglevel: none
   # loglevel: normal
