--- a/roles/keepalived/tasks/main.yml
+++ b/roles/keepalived/tasks/main.yml
@@ -1,3 +1,20 @@
-#SPDX-License-Identifier: MIT-0
+# SPDX-License-Identifier: MIT-0
 ---
 # tasks file for roles/keepalived
+
+- name: Install keepalived
+  ansible.builtin.apt:
+    name:
+      - keepalived
+    state: latest
+    update_cache: true
+  tags: keepalived
+
+- name: Setup keepalived
+  ansible.builtin.template:
+    src: "{{ item }}"
+    dest: /etc/keepalived/
+    mode: "+r"
+  tags: keepalived
+  loop:
+    - keepalived.conf
