add keepalived roles

--- a/roles/keepalived/templates/keepalived.conf
+++ b/roles/keepalived/templates/keepalived.conf
@@ -7,11 +7,11 @@ global_defs {
    notification_email_from alert@example.com
    smtp_server 127.0.0.1
    smtp_connect_timeout 30
-   router_id LVS_DEVEL
-   vrrp_skip_check_adv_addr
-   vrrp_strict
-   vrrp_garp_interval 0
-   vrrp_gna_interval 0
+   router_id {{ range(1,999) | random }}
+#    vrrp_skip_check_adv_addr
+#    vrrp_strict
+#    vrrp_garp_interval 0
+#    vrrp_gna_interval 0
 }
 
 vrrp_instance VI_{{ range(1,999) | random }} {
