add keepalived roles

--- a/roles/keepalived/templates/keepalived.conf
+++ b/roles/keepalived/templates/keepalived.conf
@@ -8,6 +8,7 @@ global_defs {
    smtp_server 127.0.0.1
    smtp_connect_timeout 30
    router_id {{ range(1,999) | random }}
+   max_auto_priority {{ range(1,999) | random }}
 #    vrrp_skip_check_adv_addr
 #    vrrp_strict
 #    vrrp_garp_interval 0
