--- a/roles/dhcpd/templates/dhcpd.conf
+++ b/roles/dhcpd/templates/dhcpd.conf
@@ -6,7 +6,7 @@ authoritative;
 option domain-name "example.org";
 option domain-name-servers 127.0.0.1;
 
-subnet {{ ansible_default_ipv4.network }} {{ netmask ansible_default_ipv4.netmask }} {
+subnet {{ ansible_default_ipv4.network }} {{ ansible_default_ipv4.netmask }} {
 #  range {{ ansible_default_ipv4.gateway }} {{ ansible_default_ipv4.address }};
  option routers {{ ansible_default_ipv4.gateway }}
 }
