add dhcpd roles

--- a/roles/dhcpd/templates/dhcpd.conf
+++ b/roles/dhcpd/templates/dhcpd.conf
@@ -2,6 +2,13 @@ ault-lease-time 600;
 max-lease-time 7200;
 ddns-update-style none;
 authoritative;
+ping-check 1;
+allow booting;
+allow bootp;
+
+# server-name "{{ ansible_hostname }}";
+next-server {{ ansible_default_ipv4.address }};
+filename "pxelinux.0";
 
 option domain-name "example.org";
 option domain-name-servers 127.0.0.1;
