--- a/roles/dhcpd/templates/dhcpd.conf
+++ b/roles/dhcpd/templates/dhcpd.conf
@@ -2,7 +2,7 @@ default-lease-time 600;
 max-lease-time 7200;
 ddns-update-style none;
 authoritative;
-ping-check 1;
+ping-check yes;
 allow booting;
 allow bootp;
 
