--- a/roles/dhcpd/templates/dhcpd.conf
+++ b/roles/dhcpd/templates/dhcpd.conf
@@ -1,3 +1,5 @@
+# {{ template_run_date }}
+
 default-lease-time 600;
 max-lease-time 7200;
 ddns-update-style none;
@@ -17,3 +19,5 @@ subnet {{ ansible_default_ipv4.network }} netmask {{ ansible_default_ipv4.netmas
 #  range {{ ansible_default_ipv4.gateway }} {{ ansible_default_ipv4.address }};
  option routers {{ ansible_default_ipv4.gateway }}
 }
+
+# {{ template_run_date }}
