add dhcpd roles

--- a/roles/dhcpd/templates/dhcpd.conf
+++ b/roles/dhcpd/templates/dhcpd.conf
@@ -17,7 +17,7 @@ option domain-name-servers 127.0.0.1;
 
 subnet {{ ansible_default_ipv4.network }} netmask {{ ansible_default_ipv4.netmask }} {
 #  range {{ ansible_default_ipv4.gateway }} {{ ansible_default_ipv4.address }};
- option routers {{ ansible_default_ipv4.gateway }}
+ option routers {{ ansible_default_ipv4.gateway }};
 }
 
 # {{ template_run_date }}
