--- a/roles/prometheus/templates/prometheus.yml
+++ b/roles/prometheus/templates/prometheus.yml
@@ -3,7 +3,7 @@ scrape_configs:
     static_configs:
       - targets:
     
-# {% for x in prometheus_x %}          
+# {% for x in prometheus_network %}          
 # {% set y = x | ansible.utils.usable_range %}
 # {% for ip in y['usable_ips'] %}
 
